--- a/AppDevelopment/AdvanceAppDevelopment/src/assets/css/home.css
+++ b/AppDevelopment/AdvanceAppDevelopment/src/assets/css/home.css
@@ -44,9 +44,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90vh;
+    height: 'auto';
     margin-top: "50%";
-
+    /* margin-bottom:; */
+    /* overflow: hidden; */
 }
 
 
