--- a/AppDevelopment/AdvanceAppDevelopment/src/assets/css/Signup.css
+++ b/AppDevelopment/AdvanceAppDevelopment/src/assets/css/Signup.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #acadc5;
+    background-color: white;
     /* background-video: url("D:\Advance App Development\Advance-App-Development\AppDevelopment\AdvanceAppDevelopment\src\assets\Videos\WaterBackground.mp4");
     background-repeat: no-repeat;
     background-size: cover; */
